html template, css and icon

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en"
-	xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://java.sun.com/jsf/core" 
-    xmlns:h="http://java.sun.com/jsf/html">
-    <h:head>
-        <title>Hello JTrack EE 7</title>
-    </h:head>
-    <h:body>
-    This is JTrack EE7 <br/>
-        <h:outputText value="#{hello.helloText}" /><br/>
-        <h:outputText value="#{hello.build_id}" /><br/>
-    </h:body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:f="http://java.sun.com/jsf/core"
+  xmlns:h="http://java.sun.com/jsf/html"
+  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+<h:body>
+  <ui:composition template="./WEB-INF/template.xhtml">
+    <ui:define name="content">
+      <article>
+        This is JTrack EE7 <br />
+        <h:outputText value="#{hello.helloText}" />
+        <br />
+      </article>
+    </ui:define>
+  </ui:composition>
+</h:body>
 </html>
