--- a/src/main/webapp/newbug.xhtml
+++ b/src/main/webapp/newbug.xhtml
@@ -7,7 +7,7 @@
   <ui:composition template="./WEB-INF/template.xhtml">
     <ui:define name="content">
       <article>
-        This is JTrack EE7 <br />
+        This is New Bug <br />
         <br />
       </article>
     </ui:define>
