--- a/src/main/webapp/WEB-INF/template.xhtml
+++ b/src/main/webapp/WEB-INF/template.xhtml
@@ -14,7 +14,7 @@
     <nav>
     <h:form>
         <h:commandLink value="Start" action="index"/>
-        <h:commandLink value="New Bug" action="newbug"/>
+        <h:commandLink value="New Bug" action="#{webconversation.newBug()}"/>
         <h:commandLink value="Search Bugs" action="search"/>
         <h:commandLink value="Configure Users" action="useradmin"/>
         <h:commandLink value="Configure Components" action="componentadmin"/>
