--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,6 +10,7 @@
             <h:outputText value="#{webconversation.successMessage}"/>
             <image src="resources/success.png"/>
         </h:panelGrid>
+        <h2>Overview</h2>
     </ui:define>
   </ui:composition>
 </h:body>
