--- a/src/main/webapp/WEB-INF/template.xhtml
+++ b/src/main/webapp/WEB-INF/template.xhtml
@@ -28,8 +28,8 @@
             <img class="menuimg" src="./resources/system-users.png" title="Configure Users"/>
         </h:commandLink>
 
-        <h:commandLink action="componentadmin">
-            <img class="menuimg" src="./resources/component.png" title="Configure Components"/>
+        <h:commandLink action="productadmin">
+            <img class="menuimg" src="./resources/component.png" title="Configure Products"/>
         </h:commandLink>
 
         <h:link outcome="index.xhtml" target="_blank">
