--- a/src/main/webapp/editbug.xhtml
+++ b/src/main/webapp/editbug.xhtml
@@ -41,7 +41,7 @@
             <h:message for="assignee"/>
             
             <h:outputText value="Title: "/>
-            <h:inputText id="title" value="#{webconversation.bug.title}"/>
+            <h:inputText id="title" value="#{webconversation.bug.title}" size="40"/>
             <h:message for="title"/>
             
             <h:outputText value="State: "/>
