fix error page and session timeout

--- a/src/main/webapp/default.xhtml
+++ b/src/main/webapp/default.xhtml
@@ -10,7 +10,7 @@
     </ui:define>
     
     <ui:define name="content">
-    <a href="index.html">Go to Startpage</a>
+    <a href="/jtrack-ee7">Go to Startpage</a>
     </ui:define>
   </ui:composition>
 </h:body>
